fix: minimum received not showing up

--- a/packages/interwovenkit-react/src/pages/deposit/Fields.module.css
+++ b/packages/interwovenkit-react/src/pages/deposit/Fields.module.css
@@ -156,7 +156,7 @@
 
   color: var(--gray-3);
 
-  margin-top: 24px;
+  padding-top: 24px;
 }
 
 .detailsButton {
